<resources>
    <string name="app_name">Login</string>
    <string name="hola">Hola!</string>
    <string name="inicia_sesi_n_en_tu_cuenta">Inicia sesión en tu cuenta</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="olvid_mi_contrase_a"><u>Olvidé mi contraseña</u></string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarte_aqu"><u>REGISTRARTE AQUÍ</u></string>
    <string name="si_no_ten_s_cuenta_pod_s">Si no tenés cuenta, podés</string>
    <string name="ingresa_tus_datos_para_crear_una_cuenta">Ingresa tus datos \n para crear una cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresa_tu_correo_para_recuperar_la_contrase_a">Ingresa tu correo para \n recuperar la contraseña</string>
    <string name="green_padlock">green padlock</string>
    <string name="recuperar">Recuperar</string>
    <string name="convertir">Convertir</string>
    <string name="pesos">Pesos</string>
    <string name="d_lares">Dólares</string>
    <string name="detalle_de_la_transacci_n">Detalle de la transacción</string>
    <string name="destino">Destino</string>
    <string name="monto">Monto</string>
    <string name="fecha">Fecha</string>
    <string name="volver">Volver</string>
    <string name="cuenta_de_destino">[cuenta de destino]</string>
    <string name="monto_transferido">[monto transferido]</string>
    <string name="fecha_de_transaccion">[fecha de transaccion]</string>
    <string name="compartir">Compartir</string>
    <string name="mi_alias">Mi Alias</string>
    <string name="tus_datos">Tus datos</string>
    <string name="mi_cbu">Mi CBU</string>
    <string name="numero_de_cuenta_de_destino">[numero de cuenta de destino]</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="user_name">user.name</string>
    <string name="user_dni">user.dni</string>
    <string name="user_email">user.email</string>
    <string name="transferir">Transferir</string>
    <string name="cbu_cvu_o_alias">CBU, CVU o Alias</string>
    <string name="monto_a_transferir">Monto a transferir</string>
    <string name="_0000_00">0000.00</string>
    <string name="saldo">SALDO</string>
    <string name="mis_datos">Mis datos</string>
    <string name="cbu">CBU</string>
    <string name="show_password">Show password</string>
    <string name="ingresa_el_monto_en_pesos_que_quieras_convertir">Ingresa el monto en pesos \n que quieras convertir</string>
    <string name="movimientos">MOVIMIENTOS</string>
    <string name="signo_pesos">$</string>
    <string name="tipo">Tipo</string>
    <string name="tipo2">[tipo]</string>
</resources>