<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DepositMoneyFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <ImageView
        android:id="@+id/imageViewMainLogo6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/hola"
        android:src="@drawable/mainlogo"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDepMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/mis_datos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMainLogo6" />

    <TextView
        android:id="@+id/depositAccountAlias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinssemibold"
        android:text="[mi alias]"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/line"
        android:layout_width="271dp"
        android:layout_height="10dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/depositAccountAlias"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/txtAlias2" />

    <TextView
        android:id="@+id/txtAlias2"
        android:layout_width="97dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinssemibold"
        android:labelFor="@id/inputAmountConv"
        android:text="Alias"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/depositAccountCbu" />

    <TextView
        android:id="@+id/depositAccountCbu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinssemibold"
        android:text="[mi cbu]"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/line6" />

    <TextView
        android:id="@+id/line6"
        android:layout_width="271dp"
        android:layout_height="10dp"
        android:background="@drawable/line"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/txtAlias" />

    <TextView
        android:id="@+id/txtAlias"
        android:layout_width="97dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinssemibold"
        android:labelFor="@id/inputAmountConv"
        android:text="@string/cbu"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/line6"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/depositUserName" />

    <TextView
        android:id="@+id/depositUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinssemibold"
        android:text="[mi nombre]"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/line7" />

    <TextView
        android:id="@+id/txtNameIngreso"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppinssemibold"
        android:labelFor="@id/inputAmountConv"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/line7"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/txtDepMoney" />

    <TextView
        android:id="@+id/line7"
        android:layout_width="271dp"
        android:layout_height="10dp"
        android:background="@drawable/line"
        app:layout_constraintBottom_toTopOf="@+id/depositUserName"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toBottomOf="@+id/txtNameIngreso" />

    <Button
        android:id="@+id/btnDepMoney"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:background="@drawable/buttonlogin"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/compartir"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:theme="@style/OrangeTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depositAccountAlias"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>